# for display continuity sake please use 2 spaces instead of tabs



2012-01-01 mmichaud <michael.michaud@free.fr>
  * FillPolygonTool : Add a new Tool in the EditToolBox to fill the Polygon
    around a mouse click. All visible linear elements can be used to create
    the Polygon boundary.
    
2011-12-31 mmichaud <michael.michaud@free.fr>
  * NoderPlugIn : fix bug 3459726 and another bug related to non-simple
    linestrings. Update documentation.

2011-12-30 ede
  - bugfix: -i18n was not applied globally as default locale
  - bugfix 3439132: File dialog item for all supported files is too long
  - OpenWizard is now also centered on main window similar to other Wizards
  - added hint to not use tabs in ChangeLog, replaced sneaked in tabs with double spaces

2011-12-26 Matthias Scholz <ms@jammerhund.de>
  * Fixed readme.txt, because I'm not an employee of refractions.net
  * com.vividsolutions.jump.workbench.ui.AttributePanel
    * Changes for a better layout. the tables now are allways on top.
  * com.vividsolutions.jump.workbench.ui.AttributeTablePanel
    * Changes for a better layout. the tables now are allways on top.
    * Any changes of a table column width will be saved and later restored.
      The column width will be saved within the project file.
  * com.vividsolutions.jump.workbench.ui.cursortool.LeftClickFilter
    * implement and applied the isRightMouseButtonUsed() method for 
      mouseClicked, mousePressed, mouseReleased and mouseDragged events.

2011-12-24 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
    * Modified Toolbar of Attribute Window
    The Attribute window toolbar is shown on the top of the window. 
    Add to this toolbar new plugins: Save datasets, Undo, Redo, 
    Show Schema view and Attribute statistics

2011-12-17 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
    * Extended Pirol Attribute Calculator
    - Add Greek P value, common and natural logarithms, 
      root, trigonometric functions (sin, cos, tan, asin, acos, atan), 