@@ -1,6 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-
+2012-01-01 Matthias Scholz <ms@jammerhund.de>
+  * first version of a new zoom/pan tool SuperZoomPanTool
+  * actualy not for use and not activated yet
 
 2012-01-01 mmichaud <michael.michaud@free.fr>
   * FillPolygonTool : Add a new Tool in the EditToolBox to fill the Polygon
